# GestaoFiliados

./: .gitignore  CHANGELOG.md  README.md  linux-installer.sh  linux-runner.sh  nginx.conf  pyproject.toml  windows-installer.ps1  windows-runner.ps1
.github/workflows/: main.yml
gestao_filiados/: db.sqlite3  manage.py
gestao_filiados/filiados/: apps.py  forms.py  models.py  urls.py  views.py
gestao_filiados/filiados/migrations/: 0001_initial.py  0002_filiado_cep_filiado_cpf_filiado_data_atualizacao_and_more.py  0003_alter_filiado_municipio.py  0004_alter_filiado_genero.py  0005_alter_filiado_municipio.py  0006_filiado_etnia_filiado_profissao.py
gestao_filiados/filiados/templates/: base_generic.html
gestao_filiados/gestao_filiados/: asgi.py  settings.py  urls.py  wsgi.py
migrations/: 0001-criacao-ent-filiado.sql
tests/: .~lock.Modelo-tse-extendido.xlsx#  Modelo-filiacao-up.xlsx  Modelo-tse-extendido.xlsx  test_exemplo.py
tests/expectativas/persistencia/: ent_filiado_up_expectativa.py
tests/expectativas/tse/: filiado_expectativa.py
tests/expectativas/up/: filiado_up_banco_expectativa.py  filiado_up_expectativa.py  filiado_up_importado_expectativa.py
tests/persistencia/: test_filiado_up_repositorio.py
tests/tse/conversor/: test_convesor_filiado.py  test_upload_filiado.py
tests/up/: test_upload_filiado_up.py
tse-importador/: pyproject.toml
tse-importador/tests/: test_exemplo.py
tse-importador/tests/expectativas/up/: filiado_up_expectativa.py
tse-importador/tests/tse/conversor/: test_convesor_filiado.py
tse-importador/tse_importador/tse/entidades/: filiado.py  situacao_filiacao.py
tse-importador/tse_importador/tse/entidades/conversor/: conversor_filiado.py
tse-importador/tse_importador/up/entidades/: filiados.py  regiao_administrativa.py
tse_importador/persistencia/entidades/: converter_ent_filiado_up.py  ent_filiado_up.py
tse_importador/persistencia/repositorios/: filiado_up_repositorio.py
tse_importador/tse/entidades/: filiado.py  situacao_filiacao.py  tse_filiado.py
(+14 files in other folders)
