[project]
name = "tse_importadorr"
version = "0.0.1"
authors = [
  { name="Caju", email="cajjunb@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = "=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ProjetosDiferenciados/GestaoFiliados"
Issues = "https://github.com/ProjetosDiferenciados/GestaoFiliados/issues"

[tool.poetry]
name = "tse-importador"
version = "0.1.0"
description = ""
authors = ["Caju <cajjunb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
paprika = "^1.3.0"
SQLAlchemy = "*"
mockito = "*"
objectmapper = "^0.0.7"
django = "^5.0.6"
pandas = "^2.2.2"
openpyxl = "^3.1.4"


[tool.pytest.ini_options]
testpaths = [
    "**/test_*.py"
]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
