[tool.poetry]
name = "tse-importador"
version = "0.1.0"
description = ""
authors = ["Caju <cajjunb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
paprika = "^1.3.0"
mockito = "*"
objectmapper = "^0.0.7"


[tool.pytest.ini_options]
testpaths = [
    "tests/**.py",
    "tests/tse/conversor/test_convesor_filiado.py"
]




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
